# validator

./: .gitignore  README.md  pyproject.toml
config/: centric.example.yml  delta_fetcher.example.yml  endpoint-schema.yml  fetch-params.example.yml  fetcher.yml  field-mapping.example.yml  params.example.yml
config/rules/: dpp-readiness.example.yml
docs/: architecture.md  changelog.md  validation-history.md
src/centric_mdm_validation/: __init__.py  cli.py  delta_daemon.py  endpoint_changelog.py  io.py  models.py  progress.py  validation_history.py
src/centric_mdm_validation/centric/: __init__.py  auth.py  cli.py  config.py  delta.py  fetcher.py  mapper.py  models.py  reconstruction.py  schema.py  store.py
src/centric_mdm_validation/reporting/: __init__.py  dpp.py  excel.py  reconstruction_check.py
src/centric_mdm_validation/validation/: __init__.py  engine.py  reconstruction_check.py  rules.py
tests/: test_centric_auth.py  test_centric_cli.py  test_centric_config.py  test_centric_fetcher.py  test_centric_mapper.py  test_centric_reconstruction.py  test_centric_store.py  test_cli.py  test_delta_daemon.py  test_endpoint_changelog.py  test_reporting.py  test_rules.py  test_validation.py  test_validation_history.py
tests/fixtures/: projected-products.json
