[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "centric-mdm-validation"
version = "0.1.0"
description = "Centric MDM validator for DPP readiness and data quality reporting."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "duckdb>=1.2.0",
  "httpx>=0.27.0",
  "openpyxl>=3.1.5",
  "pydantic>=2.8.0",
  "PyYAML>=6.0.2",
  "typer>=0.12.5",
]

[project.scripts]
centric-mdm = "centric_mdm_validation.cli:app"
centric-fetch = "centric_mdm_validation.centric.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/centric_mdm_validation"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
